--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.4.2</title>
+<title>Novo Pedido — MoskoGás v2.4.3</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -43,9 +43,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.4.2 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.4.3 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.4.2</span></h1>
+  <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.4.3</span></h1>
 
   <!-- BUSCA CLIENTE -->
   <div class="card">
@@ -733,7 +733,7 @@ function addProductFromSearch(idx) {
   box.style.display = 'none';
   box._data = [];
   document.getElementById('product-search').value = '';
-  addItem(String(p.id), p.name || 'Produto', parseFloat(p.price) || 0);
+  addItem(String(p.id), p.name || 'Produto', parseFloat(p.price) || 0, p.code || '');
 }
 
 document.addEventListener('click', e => {
@@ -742,10 +742,10 @@ document.addEventListener('click', e => {
 });
 
 // ── Itens ─────────────────────────────────────────────────────
-function addItem(id, name, price) {
+function addItem(id, name, price, code) {
   const existing = items.find(i => i.id === id);
   if (existing) { existing.qty++; }
-  else { items.push({ id, name, qty: 1, price }); }
+  else { items.push({ id, name, qty: 1, price, code: code || '' }); }
   renderItems();
 }
 
@@ -829,7 +829,7 @@ async function saveOrder() {
         bairro:           document.getElementById('cBairro').value,
         complemento:      document.getElementById('cComp').value,
         referencia:       document.getElementById('cRef').value,
-        items:            items.map(i => ({ name: i.name, qty: i.qty, price: i.price, bling_id: i.bling_id })),
+        items:            items.map(i => ({ name: i.name, qty: i.qty, price: i.price, bling_id: i.id, code: i.code || '' })),
         total_value:      total || null,
         notes:            document.getElementById('notes').value,
         tipo_pagamento:   tipoPgto,
