--- a/entregador.html
+++ b/entregador.html
@@ -71,7 +71,7 @@
     <option value="whatsapp_enviado">🟢 WhatsApp Enviado</option>
     <option value="entregue">🔵 Entregue</option>
   </select>
-  <button class="btn btn-refresh" onclick="load()">🔄</button>
+  <button class="btn btn-refresh" onclick="load()" title="Atualizar lista de entregas">🔄</button>
   <label class="auto-lbl"><input type="checkbox" id="autoRefresh" onchange="toggleAuto()"> Auto (30s)</label>
 </div>
 
